--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "class-transformer": "^0.5.1",
     "knex": "^2.4.2",
     "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
