--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_PORT=3306
-DATABASE_HOST=gym-db
+DATABASE_HOST=localhost
 GYM_DATABASE_NAME=gymapp
 DATABASE_USER=root
 DATABASE_PWD=123456
