--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ DATABASE_USER=root
 DATABASE_PWD=123456
 DATABASE_CLIENT=mysql2
 APP_PORT=3000
+
+DATABASE_URL="mysql://root:123456@localhost:3306/gymapp"
