--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-DATABASE_PORT=3307
+DATABASE_PORT=3306
 DATABASE_HOST=gym-db
 GYM_DATABASE_NAME=gymapp
 DATABASE_USER=root
 DATABASE_PWD=123456
 DATABASE_CLIENT=mysql2
 APP_PORT=3000
+
+DATABASE_URL='mysql://root:123456@gym-db:3306/gymapp'
