--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 DATABASE_PORT=3306
 DATABASE_HOST=gym-db
-GYM_DATABASE_NAME=gymapp
+GYM_DATABASE_NAME=gymapp2
 DATABASE_USER=root
 DATABASE_PWD=123456
 DATABASE_CLIENT=mysql2
 APP_PORT=3000
 
-DATABASE_URL='mysql://root:123456@gym-db:3306/gymapp'
+DATABASE_URL='mysql://root:123456@localhost:3306/gymapp2'
