--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ DATABASE_PWD=123456
 DATABASE_CLIENT=mysql2
 APP_PORT=3000
 
-DATABASE_URL='mysql://root:123456@localhost:3306/gymapp2'
+DATABASE_URL='mysql://root:123456@gym-db:3306/gymapp'
