--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-DATABASE_PORT=3306
-DATABASE_HOST=localhost
+DATABASE_PORT=3308
+DATABASE_HOST=gym-db
 GYM_DATABASE_NAME=gymapp2
 DATABASE_USER=root
 DATABASE_PWD=123456
 DATABASE_CLIENT=mysql2
-APP_PORT=3000
+APP_PORT=4567
 DATABASE_TYPE=mysql
-
-DATABASE_URL='mysql://root:123456@localhost:3306/gymapp'
+DATABASE_URL="${DATABASE_TYPE}://${DATABASE_USER}:${DATABASE_PWD}@${DATABASE_HOST}:${DATABASE_PORT}/${GYM_DATABASE_NAME}"
+#DATABASE_URL='mysql://root:123456@localhost:3306/gymapp'
