relation users and user_permission typeorm

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE_PORT=3308
-DATABASE_HOST=gym-db
+DATABASE_PORT=3306
+DATABASE_HOST=localhost
 GYM_DATABASE_NAME=gymapp2
 DATABASE_USER=root
 DATABASE_PWD=123456
