env and entitys realocation

--- a/.env
+++ b/.env
@@ -1,10 +1,23 @@
-DATABASE_PORT=3306
-DATABASE_HOST=localhost
-GYM_DATABASE_NAME=gymapp2
-DATABASE_USER=root
-DATABASE_PWD=123456
-DATABASE_CLIENT=mysql2
-APP_PORT=4567
-DATABASE_TYPE=mysql
-DATABASE_URL="${DATABASE_TYPE}://${DATABASE_USER}:${DATABASE_PWD}@${DATABASE_HOST}:${DATABASE_PORT}/${GYM_DATABASE_NAME}"
+DEV_DATABASE_PORT=3306
+DEV_DATABASE_HOST=localhost
+DEV_GYM_DATABASE_NAME=gymapp2
+DEV_DATABASE_USER=root
+DEV_DATABASE_PWD=123456
+DEV_DATABASE_CLIENT=mysql2
+DEV_APP_PORT=4567
+DEV_DATABASE_TYPE=mysql
+DEV_DATABASE_URL="${DATABASE_TYPE}://${DATABASE_USER}:${DATABASE_PWD}@${DATABASE_HOST}:${DATABASE_PORT}/${GYM_DATABASE_NAME}"
+#DATABASE_URL='mysql://root:123456@localhost:3306/gymapp'
+
+ENVIROMENT=DEV
+
+PROD_DATABASE_PORT=3306
+PROD_DATABASE_HOST=localhost
+PROD_GYM_DATABASE_NAME=gymapp2
+PROD_DATABASE_USER=root
+PROD_DATABASE_PWD=123456
+PROD_DATABASE_CLIENT=mysql2
+PROD_APP_PORT=4567
+PROD_DATABASE_TYPE=mysql
+PROD_DATABASE_URL="${DATABASE_TYPE}://${DATABASE_USER}:${DATABASE_PWD}@${DATABASE_HOST}:${DATABASE_PORT}/${GYM_DATABASE_NAME}"
 #DATABASE_URL='mysql://root:123456@localhost:3306/gymapp'
