--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "knex": "^2.4.2",
     "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
