--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "autoprefixer": "^10.4.14",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "dotenv": "^16.0.3",
-    "ejs": "^3.1.9",
+    "express-handlebars": "^7.0.7",
+    "handlebars": "^4.7.7",
+    "hbs": "^4.2.0",
     "knex": "^2.4.2",
     "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
@@ -45,6 +48,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
+    "@types/hbs": "^4.0.1",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
@@ -54,6 +58,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
+    "nodemon": "^2.0.22",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
