--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.15"
+    "typeorm": "^0.3.15",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
