--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "^10.4.14",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express-handlebars": "^7.0.7",
     "handlebars": "^4.7.7",
