--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ DEV_APP_PORT=4567
 DEV_DATABASE_TYPE=mysql
 DEV_DATABASE_URL="${DATABASE_TYPE}://${DATABASE_USER}:${DATABASE_PWD}@${DATABASE_HOST}:${DATABASE_PORT}/${GYM_DATABASE_NAME}"
 #DATABASE_URL='mysql://root:123456@localhost:3306/gymapp'
+DEV_AUTH_API=http://localhost:3001
 
 ENVIROMENT=DEV
 
