--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DEV_DATABASE_PORT=3306
-DEV_DATABASE_HOST=gym-db
+DEV_DATABASE_HOST=localhost
 DEV_GYM_DATABASE_NAME=gymapp2
 DEV_DATABASE_USER=root
 DEV_DATABASE_PWD=123456
@@ -8,7 +8,7 @@ DEV_APP_PORT=4567
 DEV_DATABASE_TYPE=mysql
 DEV_DATABASE_URL="${DATABASE_TYPE}://${DATABASE_USER}:${DATABASE_PWD}@${DATABASE_HOST}:${DATABASE_PORT}/${GYM_DATABASE_NAME}"
 #DATABASE_URL='mysql://root:123456@localhost:3306/gymapp'
-DEV_AUTH_API=http://gym-auth:3001
+DEV_AUTH_API=http://localhost:3001
 
 ENVIROMENT=DEV
 
