--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ./:/usr/src/app    
     command: >
       sh -c "npm install &&
-            npm run start:dev"
+            npm run dev"
     depends_on:
       - gym-db
     networks:
